--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URL="mongodb://localhost:27017"
+MONGODB_URL="mongodb+srv://aditya8707:VpgwMobvL8S8KXA3@cluster0.fuitpjg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET_KEY="WE ARE A TEAM NOT FAMILY"
